trying a list this time, yay

--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -39,7 +39,8 @@
 				Regardless, we hope that most djangonauts will be staying at the same hotels for practical and social reasons.
 				To that end, here is a list of suitable hotels which will be extended over time, watch for announcements via the
 				<a href="{% url blog_index %}">conference blog</a>.
-                <p class="hotel">{% filter linebreaksbr %}
+                <ul class="hotels">
+                <li class="hotel">{% filter linebreaksbr %}
                     INNSIDE Premium Hotel
                     Lange Straße 31
                     10243 Berlin
@@ -54,9 +55,8 @@
                     Double room from € 97,-
 
                     approx. 10 mins by foot from venue
-                    {% endfilter %}
-                </p>
-                <p class="hotel">{% filter linebreaksbr %}
+                    {% endfilter %}</li>
+                <li class="hotel">{% filter linebreaksbr %}
                     Klassik Hotel Friedrichshain
                     Revaler Straße 6 10245 Berlin
                     Tel: +49 30 319886 0
@@ -69,9 +69,8 @@
                     Double room from € 95,-
 
                     approx. 15 mins by foot from venue
-                    {% endfilter %}
-                </p>
-                <p class="hotel">{% filter linebreaksbr %}
+                    {% endfilter %}</li>
+                <li class="hotel">{% filter linebreaksbr %}
                     Upstalsboom Hotel Friedrichshain
                     Gubener Straße 42 10243 Berlin
                     Tel: +49 30 29375 0
@@ -84,9 +83,8 @@
                     Double room from € 89,-
 
                     approx. 15 mins by foot from venue
-                    {% endfilter %}
-                </p>
-                <p class="hotel">{% filter linebreaksbr %}
+                    {% endfilter %}</li>
+                <li class="hotel">{% filter linebreaksbr %}
                     NH Berlin-Alexanderplatz
                     Landsberger Allee 26-32 10249 Berlin
                     Tel: +49 30 422613 0
@@ -99,9 +97,8 @@
                     Double room from € 89,-
 
                     approx. 15 mins by foot from venue
-                    {% endfilter %}
-                </p>
-                <p class="hotel">{% filter linebreaksbr %}
+                    {% endfilter %}</li>
+                <li class="hotel">{% filter linebreaksbr %}
 
                     art'otel Berlin-Mitte
                     Wallstraße 70-73 10179 Berlin
@@ -115,9 +112,8 @@
                     Double room from € 89,-
 
                     approx. 15 mins by foot from venue
-                    {% endfilter %}
-                </p>
-                <p class="hotel">{% filter linebreaksbr %}
+                    {% endfilter %}</li>
+                <li class="hotel">{% filter linebreaksbr %}
                     Hotel Ibis Berlin City Ost
                     An der Schillingbrücke 2 10243 Berlin
 
@@ -131,8 +127,8 @@
                     Double room from € 59,-
 
                     approx. 15 mins by foot from venue
-                    {% endfilter %}
-                </p>
+                    {% endfilter %}</li>
+                </ul>
 			</p>
             <h2>Resources</h2>
 			<p>
