god I hate html

--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -40,8 +40,7 @@
 				To that end, here is a list of suitable hotels which will be extended over time, watch for announcements via the
 				<a href="{% url blog_index %}">conference blog</a>.
                 <ul class="hotels">
-                <li class="hotel">{% filter linebreaksbr %}
-                    INNSIDE Premium Hotel
+                <li class="hotel">{% filter linebreaksbr %}INNSIDE Premium Hotel
                     Lange Straße 31
                     10243 Berlin
 
@@ -56,8 +55,7 @@
 
                     approx. 10 mins by foot from venue
                     {% endfilter %}</li>
-                <li class="hotel">{% filter linebreaksbr %}
-                    Klassik Hotel Friedrichshain
+                <li class="hotel">{% filter linebreaksbr %}Klassik Hotel Friedrichshain
                     Revaler Straße 6 10245 Berlin
                     Tel: +49 30 319886 0
                     Fax: +49 30 319886 199
@@ -70,8 +68,7 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
-                <li class="hotel">{% filter linebreaksbr %}
-                    Upstalsboom Hotel Friedrichshain
+                <li class="hotel">{% filter linebreaksbr %}Upstalsboom Hotel Friedrichshain
                     Gubener Straße 42 10243 Berlin
                     Tel: +49 30 29375 0
                     Fax: +49 30 29375 777
@@ -84,8 +81,7 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
-                <li class="hotel">{% filter linebreaksbr %}
-                    NH Berlin-Alexanderplatz
+                <li class="hotel">{% filter linebreaksbr %}NH Berlin-Alexanderplatz
                     Landsberger Allee 26-32 10249 Berlin
                     Tel: +49 30 422613 0
                     Fax: +49 30 422613 300
@@ -98,9 +94,7 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
-                <li class="hotel">{% filter linebreaksbr %}
-
-                    art'otel Berlin-Mitte
+                <li class="hotel">{% filter linebreaksbr %}art'otel Berlin-Mitte
                     Wallstraße 70-73 10179 Berlin
                     Tel: +49 30 240 620
                     Fax: +49 30 24062222
@@ -113,8 +107,7 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
-                <li class="hotel">{% filter linebreaksbr %}
-                    Hotel Ibis Berlin City Ost
+                <li class="hotel">{% filter linebreaksbr %}Hotel Ibis Berlin City Ost
                     An der Schillingbrücke 2 10243 Berlin
 
                     Tel: +49 30 25760 0
