--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -54,9 +54,13 @@
                     Double room from € 97,-
 
                     approx. 10 mins by foot from venue
+
                     {% endfilter %}</li>
+
                 <li class="hotel">{% filter linebreaksbr %}Klassik Hotel Friedrichshain
-                    Revaler Straße 6 10245 Berlin
+                    Revaler Straße 6
+                    10245 Berlin
+
                     Tel: +49 30 319886 0
                     Fax: +49 30 319886 199
 
@@ -67,9 +71,13 @@
                     Double room from € 95,-
 
                     approx. 15 mins by foot from venue
+
                     {% endfilter %}</li>
+
                 <li class="hotel">{% filter linebreaksbr %}Upstalsboom Hotel Friedrichshain
-                    Gubener Straße 42 10243 Berlin
+                    Gubener Straße 42
+                    10243 Berlin
+
                     Tel: +49 30 29375 0
                     Fax: +49 30 29375 777
 
@@ -81,8 +89,11 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
+
                 <li class="hotel">{% filter linebreaksbr %}NH Berlin-Alexanderplatz
-                    Landsberger Allee 26-32 10249 Berlin
+                    Landsberger Allee 26-32
+                    10249 Berlin
+
                     Tel: +49 30 422613 0
                     Fax: +49 30 422613 300
 
@@ -94,8 +105,11 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
+
                 <li class="hotel">{% filter linebreaksbr %}art'otel Berlin-Mitte
-                    Wallstraße 70-73 10179 Berlin
+                    Wallstraße 70-73
+                    10179 Berlin
+
                     Tel: +49 30 240 620
                     Fax: +49 30 24062222
 
@@ -107,8 +121,10 @@
 
                     approx. 15 mins by foot from venue
                     {% endfilter %}</li>
+
                 <li class="hotel">{% filter linebreaksbr %}Hotel Ibis Berlin City Ost
-                    An der Schillingbrücke 2 10243 Berlin
+                    An der Schillingbrücke 2
+                    10243 Berlin
 
                     Tel: +49 30 25760 0
                     Fax: +49 30 25760 333
@@ -120,6 +136,7 @@
                     Double room from € 59,-
 
                     approx. 15 mins by foot from venue
+
                     {% endfilter %}</li>
                 </ul>
 			</p>
