--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -82,7 +82,7 @@
                     Fax: +49 30 29375 777
 
                     Email: info@upstalsboom-berlin.de
-                    <a href="http://www.upstalsboom-berlin.de">www.upstalsboom-berlin.de</a>
+                    <a href="http://www.upstalsboom.de/hotel_berlin/hotel_friedrichshain/">www.upstalsboom.de</a>
 
                     Single room from € 89,-
                     Double room from € 89,-
