--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -77,9 +77,11 @@
 						<h2>announcements<br>news</h2>					
 					</a>
 				</li>
-				<li class="inactive">
-					<h1>Wiki</h1>
-					<h2>coming soon!</h2>
+				<li id="nav_wiki">
+					<a href="http://djangode.pbworks.com/DjangoCon-Europe-2010">
+					    <h1>Wiki</h1>
+				    	<h2>more details<br/>room sharing</h2>
+				    </a>
 				</li>
 				<li id="dates">
 					<h1>Conference: 24<sup>th</sup>-26<sup>th</sup> May, Sprints: 27<sup>th</sup>-28<sup>th</sup> May</h1>
