--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -54,9 +54,9 @@
 		<nav class="clearfix" id="primarynav">
 			<ul class="nav clearfix">
 				<li id="nav_talks">
-					<a href="{% url talks-submit %}">
-						<h1>Talks</h1>
-						<h2>guidelines<br>submit</h2>						
+					<a href="{% url schedule %}">
+						<h1>Schedule</h1>
+						<h2>talks<br>speakers</h2>						
 					</a>
 				</li>
 				<li id="nav_tickets">
