fixed broken links

--- a/djangocon/templates/about.html
+++ b/djangocon/templates/about.html
@@ -20,7 +20,7 @@
             </p>
             <h5>Stephan Jäkel</h5>
             <p>
-                <a href="http://twitter.com/younork">@younork</a> - Organization
+                <a href="http://twitter.com/stephrdev">@stephrdev</a> - Organization
             </p>
             <h5>Philipp Bosch</h5>
             <p>
