--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -45,7 +45,7 @@
             <p>DjangoCon's site was built by the community, and has enjoyed the contributions of the following (non-exhaustive list of) people:</p>
             <ul>
                 <li>Jannis Leidel / <a href="http://twitter.com/jezdez">@jezdez</a></li>
-                <li>Stephan Jäkel / <a href="http://twitter.com/younork">@younork</a></li>
+                <li>Stephan Jäkel / <a href="http://twitter.com/stephrdev">@stephrdev</a></li>
                 <li>Idan Gazit / <a href="http://twitter.com/idangazit">@idangazit</a></li>
                 <li>Philipp Bosch / <a href="http://twitter.com/philippbosch">@philippbosch</a></li>
                 {# <li>Jesper Nøhr / <a href="http://twitter.com/jespern">@jespern</a></li> #}
