--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -14,7 +14,11 @@
         <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
         <link rel="apple-touch-icon" href="{{ STATIC_URL }}apple-touch-icon.png">
         {% block css %}
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" media="screen, projection" >
+        <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/print.css" media="print">-->
+        <!--[if IE]>
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/ie.css" media="screen, projection">
+        <![endif]-->
         {% endblock css %}
         <script src="{{ STATIC_URL }}js/modernizr-1.6.min.js"></script>
         {% block typekit %}
