--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -57,3 +57,368 @@ q:before, q:after, blockquote:before, blockquote:after {
 a img {
   border: none;
 }
+
+/* line 8, ../sass/screen.scss */
+body {
+  background-color: #a90006;
+}
+
+/* line 12, ../sass/screen.scss */
+body#placeholder {
+  margin-left: auto;
+  margin-right: auto;
+  width: 960px;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 33, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_1, body#placeholder .grid_2, body#placeholder .grid_3, body#placeholder .grid_4, body#placeholder .grid_5, body#placeholder .grid_6, body#placeholder .grid_7, body#placeholder .grid_8, body#placeholder .grid_9, body#placeholder .grid_10, body#placeholder .grid_11, body#placeholder .grid_12, body#placeholder .grid_13, body#placeholder .grid_14, body#placeholder .grid_15, body#placeholder .grid_16 {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_1 {
+  width: 40px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_2 {
+  width: 100px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_3 {
+  width: 160px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_4 {
+  width: 220px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_5 {
+  width: 280px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_6 {
+  width: 340px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_7 {
+  width: 400px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_8 {
+  width: 460px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_9 {
+  width: 520px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_10 {
+  width: 580px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_11 {
+  width: 640px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_12 {
+  width: 700px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_13 {
+  width: 760px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_14 {
+  width: 820px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_15 {
+  width: 880px;
+}
+/* line 36, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .grid_16 {
+  width: 940px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_1 {
+  padding-left: 60px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_2 {
+  padding-left: 120px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_3 {
+  padding-left: 180px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_4 {
+  padding-left: 240px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_5 {
+  padding-left: 300px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_6 {
+  padding-left: 360px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_7 {
+  padding-left: 420px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_8 {
+  padding-left: 480px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_9 {
+  padding-left: 540px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_10 {
+  padding-left: 600px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_11 {
+  padding-left: 660px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_12 {
+  padding-left: 720px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_13 {
+  padding-left: 780px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_14 {
+  padding-left: 840px;
+}
+/* line 44, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .prefix_15 {
+  padding-left: 900px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_1 {
+  padding-right: 60px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_2 {
+  padding-right: 120px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_3 {
+  padding-right: 180px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_4 {
+  padding-right: 240px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_5 {
+  padding-right: 300px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_6 {
+  padding-right: 360px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_7 {
+  padding-right: 420px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_8 {
+  padding-right: 480px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_9 {
+  padding-right: 540px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_10 {
+  padding-right: 600px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_11 {
+  padding-right: 660px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_12 {
+  padding-right: 720px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_13 {
+  padding-right: 780px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_14 {
+  padding-right: 840px;
+}
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .suffix_15 {
+  padding-right: 900px;
+}
+/* line 56, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .alpha {
+  margin-left: 0;
+}
+/* line 58, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .omega {
+  margin-right: 0;
+}
+/* line 71, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_1, body#placeholder .push_2, body#placeholder .push_3, body#placeholder .push_4, body#placeholder .push_5, body#placeholder .push_6, body#placeholder .push_7, body#placeholder .push_8, body#placeholder .push_9, body#placeholder .push_10, body#placeholder .push_11, body#placeholder .push_12, body#placeholder .push_13, body#placeholder .push_14, body#placeholder .push_15, body#placeholder .push_16,
+body#placeholder .pull_1, body#placeholder .pull_2, body#placeholder .pull_3, body#placeholder .pull_4, body#placeholder .pull_5, body#placeholder .pull_6, body#placeholder .pull_7, body#placeholder .pull_8, body#placeholder .pull_9, body#placeholder .pull_10, body#placeholder .pull_11, body#placeholder .pull_12, body#placeholder .pull_13, body#placeholder .pull_14, body#placeholder .pull_15, body#placeholder .pull_16 {
+  position: relative;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_1 {
+  left: 60px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_1 {
+  left: -60px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_2 {
+  left: 120px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_2 {
+  left: -120px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_3 {
+  left: 180px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_3 {
+  left: -180px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_4 {
+  left: 240px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_4 {
+  left: -240px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_5 {
+  left: 300px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_5 {
+  left: -300px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_6 {
+  left: 360px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_6 {
+  left: -360px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_7 {
+  left: 420px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_7 {
+  left: -420px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_8 {
+  left: 480px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_8 {
+  left: -480px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_9 {
+  left: 540px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_9 {
+  left: -540px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_10 {
+  left: 600px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_10 {
+  left: -600px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_11 {
+  left: 660px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_11 {
+  left: -660px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_12 {
+  left: 720px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_12 {
+  left: -720px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_13 {
+  left: 780px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_13 {
+  left: -780px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_14 {
+  left: 840px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_14 {
+  left: -840px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_15 {
+  left: 900px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_15 {
+  left: -900px;
+}
+/* line 75, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .push_16 {
+  left: 960px;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .pull_16 {
+  left: -960px;
+}
+/* line 56, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .alpha {
+  margin-left: 0;
+}
+/* line 58, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-960-plugin-0.10.0/stylesheets/960/_grid.sass */
+body#placeholder .omega {
+  margin-right: 0;
+}
+/* line 17, ../sass/screen.scss */
+body#placeholder h1 {
+  text-indent: -9999px;
+  width: 460px;
+  height: 527px;
+  background: url(../img/masthead.png) no-repeat center center;
+}
+/* line 24, ../sass/screen.scss */
+body#placeholder h2 {
+  display: none;
+}
